# azure-proto

./: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod
dart/msp/azure/openai/v1/: completions.pb.dart  completions.pbenum.dart  completions.pbjson.dart  completions.pbserver.dart  embeddings.pb.dart  embeddings.pbenum.dart  embeddings.pbjson.dart  embeddings.pbserver.dart  entity.pb.dart  entity.pbenum.dart  entity.pbjson.dart  entity.pbserver.dart
go/: README.md  go.mod
go/example/: main.go
go/msp/azure/openai/v1/: completions.pb.go  embeddings.pb.go  entity.pb.go
js/msp/azure/openai/v1/: completions_pb.d.ts  completions_pb.js  embeddings_pb.d.ts  embeddings_pb.js  entity_pb.d.ts  entity_pb.js
openapiv2/msp/azure/openai/v1/: completions.swagger.json  embeddings.swagger.json
proto/azure/openai/v1/: chat_completions.proto  completions.proto  embeddings.proto  entity.proto
python/: README.md  pyproject.toml
python/msp/azure/openai/assistants/v1/: assistants_pb2.py  assistants_pb2.pyi  files_pb2.py  files_pb2.pyi
python/msp/azure/openai/audio/v1/: transcriptions_pb2.py  translations_pb2.py
python/msp/azure/openai/chat/v1/: completions_pb2.py  completions_pb2.pyi
python/msp/azure/openai/images/v1/: generations_pb2.py  generations_pb2.pyi
python/msp/azure/openai/v1/: completions_pb2.py  completions_pb2.pyi  embeddings_pb2.py  embeddings_pb2.pyi  entity_pb2.py  entity_pb2.pyi
rust/: msp.azure.openai.assistants.v1.rs  msp.azure.openai.chat.v1.rs  msp.azure.openai.images.v1.rs  msp.azure.openai.v1.rs
(+140 files in other folders)
